--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>中国平安财产保险股份有限公司</title>
+    <title>刘冠楠作品集</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -51,9 +51,7 @@
 <div id="app">
     <div class="wrap">
         <div class="title">
-            <p>中国平安财产保险股份有限公司
-            </br>国内水路、陆路货物运输保险条款
-            </p>
+            <p>作品集</p>
         </div>
         <div class="question">
             <p class="title">总则</p>
