--- a/index.html
+++ b/index.html
@@ -6,117 +6,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="icon" href="//cdn1.chuan.66yunlian.com/common/1.0.0/image/favicon.ico" />
-    <style>
-
-        .wrap {
-            padding: 10px 5px;
-        }
-        .title {
-            padding: 10px;
-            text-align: center;
-        }
-        .title>p {
-            line-height: 30px;
-        }
-        .question {
-            padding:10px;
-            margin: 0 auto 5px;
-            /* border-bottom: 1px solid #eae9eb; */
-        }
-        .question .qa_title {
-            color: 30px;
-            font-size: 14px;
-        }
-        .question .qa_content {
-            color: #848484;
-            font-size: 14px;
-            line-height: 30px;
-        }
-        .question .qa_content>span {
-            font-weight: 900;
-            width: 60px;
-            display: inline-block;
-            text-indent: .1em;
-        }
-        .text_indent {
-            text-indent: 2em;
-        }
-        .border_none {
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css">
 </head>
 <body>
-<div id="app">
-    <div class="wrap">
-        <div class="title">
-            <p>作品集</p>
-        </div>
-        <div class="question">
-            <p class="title">总则</p>
-            <p class="qa_content text_indent"><span>第一条</span>为使保险货物在水路、铁路、公路和联运运输中，因遭受保险责任范围内的自然灾害或意外事故所造成的损失能够得到经济补偿，并加强货物的安全防损工作，以利商品生产和商品流通，特举办保险。 </p>
-        </div>
-        <div class="question">
-            <p class="title">保险责任</p>
-            <p class="qa_content text_indent"><span>第二条</span>本保险分为基本险和综合险两种。保险货物遭受损失时，保险人按承保险别的责任范围负赔偿责任。</p>
-            <p class="qa_content text_indent">（一）基本险</p>
-            <p class="qa_content text_indent">1．因火灾、爆炸、雷电、冰雹、暴风、暴雨、洪水、地震、海啸、地陷、崖崩、滑坡、泥石流所造成的损失；</p>
-            <p class="qa_content text_indent">2．由于运输工具发生碰撞、搁浅、触礁、倾覆、沉没、出轨或隧道、码头坍塌所造成的损失；</p>
-            <p class="qa_content text_indent">3．在装货、卸货或转载时因遭受不属于包装质量不善或装卸人员违反操作规程所造成的损失；</p>
-            <p class="qa_content text_indent">4．按国家规定或一般惯例应分摊的共同海损的费用；</p>
-            <p class="qa_content text_indent">5．在发生上述灾害、事故时，因纷乱而造成货物的散失及因施救或保护货物所支付的直接合理的费用。</p>
-            <p class="qa_content text_indent">（二）综合险</p>
-            <p class="qa_content text_indent">本保险除包括基本险责任外，保险人还负责赔偿：</p>
-            <p class="qa_content text_indent">1．因受震动、碰撞、挤压而造成货物破碎、弯曲、凹瘪、折断、开裂或包装破裂致使货物散失的损失；</p>
-            <p class="qa_content text_indent">2．液体货物因受震动、碰撞或挤压致使所用容器（包括封口）损坏而渗漏的损失，或用液体保藏的货物因液体渗漏而造成保藏货物腐烂变质的损失；</p>
-            <p class="qa_content text_indent">3．遭受盗窃或整件提货不着的损失；</p>
-            <p class="qa_content text_indent">4．符合安全运输规定而遭受雨淋所致的损失。</p>
-        </div>
-        <div class="question">
-            <p class="title">除外责任</p>
-            <p class="qa_content text_indent"><span>第三条</span>由于下列原因造成保险货物的损失，保险人不负赔偿责任：</p>
-            <p class="qa_content text_indent">（一）战争或军事行动；</p>
-            <p class="qa_content text_indent">（二）核事件或核爆炸；</p>
-            <p class="qa_content text_indent">（三）保险货物本身的缺陷、自然损耗，以及货物包装不善；</p>
-            <p class="qa_content text_indent">（四）被保险人的故意行为或过失；</p>
-            <p class="qa_content text_indent">（五）全程是公路货物运输的，盗窃和整件提货不着的损失；</p>
-            <p class="qa_content text_indent">（六）其他不属于保险责任范围内的损失。  </p>
-        </div>
-        <div class="question">
-            <p class="title">责任起讫</p>
-            <p class="qa_content text_indent"><span>第四条</span>保险责任自签发保险凭证和保险货物运离起运地发货人的最后一个仓库或储运处所时起，至该保险凭证上注明的目的地的收货人在当地的第一个仓库或储存处所时终止。但保险货物运抵目的地后，如果收货人未及时提货，则保险责任的终止期最多延长至以收货人接到《到货通知单》后的十五天为限（以邮戳日期为准）。</p>
-        </div>
-        <div class="question">
-                <p class="title">保险金额</p>
-                <p class="qa_content text_indent"><span>第五条</span>保险价值为货物的实际价值，按货物的实际价值或货物的实际价值加运杂费确定。保险金额由投保人参照保险价值自行确定，并在保险合同中载明。保险金额不得超过保险价值。超过保险价值的，超过部分无效，保险人应当退还相应的保险费。</p>
-        </div>
-        <div class="question">
-                <p class="title">投保人、被保险人的义务</p>
-                <p class="qa_content text_indent"><span>第六条</span>投保人应履行如实告知义务，如实回答保险人就保险标的或被保险人的有关情况提出的询问。</p>
-                <p class="qa_content text_indent">投保人故意或者因重大过失未履行前款规定的如实告知义务，足以影响保险人决定是否同意承保或者提高保险费率的，保险人有权解除合同。保险合同自保险人的解约通知书到达投保人或被保险人时解除。</p>
-                <p class="qa_content text_indent">投保人故意不履行如实告知义务的，保险人对于保险合同解除前发生的保险事故，不承担赔偿责任，并不退还保险费。 </p>
-                <p class="qa_content text_indent">投保人因重大过失未履行如实告知义务，对保险事故的发生有严重影响的，保险人对于保险合同解除前发生的保险事故，不承担赔偿责任，但应当退还保险费。</p>
-                <p class="qa_content text_indent"><span>第七条</span>投保人在保险人签发保险凭证的同时，应按照保险费率，一次交清应付的保险费。若投保人未按照约定交付保险费，保险费交付前发生的保险事故，保险人不承担赔偿责任。</p>
-                <p class="qa_content text_indent"><span>第八条</span>被保险人应严格遵守国家及交通运输部门关于安全运输的各项规定。还应当接受并协助保险人对保险货物进行的查验防损工作，货物包装必须符合国家和主管部门规定的标准。对于因被保险人未遵守上述约定而导致保险事故的，保险人不负赔偿责任；对于因被保险人未遵守上述约定而导致损失扩大的，保险人对扩大的损失不负赔偿责任。</p>
-                <p class="qa_content text_indent"><span>第九条</span>货物如果发生保险责任范围内的损失时，被保险人获悉后，应立即通知保险人的当地保险机构并应迅速采取施救和保护措施防止或减少货物损失。</p>
-                <p class="qa_content text_indent">故意或者因重大过失未及时通知，致使保险事故的性质、原因、损失程度等难以确定的，保险人对无法确定的部分，不承担赔偿责任，但保险人通过其他途径已经及时知道或者应当及时知道保险事故发生的除外。</p>
-        </div>
-        <div class="question">
-            <p class="title">赔偿处理</p>
-            <p class="qa_content text_indent"><span>第十条</span>被保险人向保险人申请索赔时，必须提供下列有关单证：</p>
-            <p class="qa_content text_indent">（一）保险凭证、运单（货票）、提货单、发货票；</p>
-            <p class="qa_content text_indent">（二）承运部门签发的货运记录、普通记录、交接验收记录、鉴定书；</p>
-            <p class="qa_content text_indent">（三）收货单位的入库记录、检验报告、损失清单及救护货物所支付的直接费用的单据。</p>
-            <p class="qa_content text_indent">收到被保险人的赔偿请求后，应当及时就是否属于保险责任作出核定，并将核定结果通知被保险人。情形复杂的，保险人在收到被保险人的赔偿请求并提供理赔所需资料后三十日内未能核定保险责任的，保险人与被保险人根据实际情形商议合理期间，保险人在商定的期间内作出核定结果并通知被保险人。对属于保险责任的，在与被保险人达成有关赔偿金额的协议后十日内，履行赔偿义务。</p>
-            <p class="qa_content text_indent"><span>第十一条</span>货物发生保险责任范围内的损失时，按货价确定保险金额的，保险人根据实际损失按起运地货价计算赔偿；按货价加运杂费确定保险金额的，保险人根据实际损失按起运地货价加运杂费计算。但最高赔偿金额以保险金额为限。</p>
-            <p class="qa_content text_indent"><span>第十二条</span>如果被保险人投保不足，保险金额低于货价时，保险人对其损失金额及支付的施救保护费用按保险金额与货价的比例计算赔偿。保险人对货物损失的赔偿金额，以及因施救或保护货物所支付的直接、合理的费用，应分别计算，并各以不超过保险金额为限。</p>
-            <p class="qa_content text_indent"><span>第十三条</span>货物发生保险责任范围内的损失，如果根据法律规定或者有关约定，应当由承运人或其他第三者负责赔偿部分或全部的，被保险人应首先向承运人或其他第三者索赔。如被保险人提出要求，保险人也可以先予赔偿，但被保险人应签发权益转让书给保险人，并协助保险人向责任方追偿。</p>
-            <p class="qa_content text_indent"><span>第十四条</span>经双方协商同意，保险人可将其享有的保险财产残余部分的权益作价折归被保险人，并可在保险赔偿金中直接扣除。</p>
-            <p class="qa_content text_indent"><span>第十五条</span>被保险人与保险人发生争议时，应当实事求是，协商解决，双方不能达成协议时，可以提交仲裁机关或法院处理。</p>
-            <p class="qa_content text_indent">本保险合同适用中华人民共和国法律(不包括港澳台地区法律）。</p>
-        </div>
+    <div id="fullpage">
     </div>
-</div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.js"></script>
+    <script type="text/javascript">
+        var root = document.querySelector('#fullpage');
+        var imgList = [];
+        for(var i = 1; i < 62; i++) {
+            var index = i < 10 ? '0' + i : i;
+            var domStr = `<div class="section"><img class="max-size" src="./img/2020profile-lgn-${index}.jpg"/></div>`
+            imgList.push(domStr);
+        }
+        root.innerHTML = imgList.join('');
+        new fullpage('#fullpage', {
+            licenseKey: 'OPEN-SOURCE-GPLV3-LICENSE',
+            // sectionsColor: ['yellow', 'orange', '#C0C0C0', '#ADD8E6'],
+        });
+    </script>
 </body>
 </html>
